<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!--Berpindah Activity-->
    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity"
        android:textSize="20sp"/>

    <!--Berpindah Activity dengan Data-->
    <Button
        android:id="@+id/btn_move_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_data"
        android:textSize="20sp"/>

    <!--Berpindah Activity dengan Object-->
    <Button
        android:id="@+id/btn_move_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_object"
        android:textSize="20sp"/>

    <!--Dial A Number-->
    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_a_number"
        android:textSize="20sp"/>

    <!--Buka Kamera-->
    <Button
        android:id="@+id/btn_open_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"
        android:textSize="20sp"/>

    <!--Berpindah Activity dengan Result-->
    <Button
        android:id="@+id/btn_move_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_result"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_dari_activity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>