<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_diterima"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/text_data_received_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header"
        android:text="@string/data_diterima_name"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/text_data_received_age"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_data_received_name"
        android:text="@string/data_diterima_age"
        android:textSize="20sp"/>

</RelativeLayout>
